# isidro

./: .gitignore  .gitmodules  LICENSE  README.md  skaffold-binauthz.sh  skaffold.dev.yaml  skaffold.prod.yaml
analytics/: README.md
analytics/gtm-stream-dataflow/: main.py  requirements.txt  setup.py
analytics/gtm-stream-functions/: main.py  (+1 more)
chart/: Chart.yaml  values.yaml
databases/: spanner.yaml
gatekeeper/: Dockerfile  main.py  requirements.txt
gbash/: Dockerfile  hooks.async.yaml  hooks.yaml  pass.sh
intents/: intents.ipynb  quality.csv  test.csv  train.csv  valid.csv
keywords/: Dockerfile  main.py  requirements-isidro.txt  requirements.txt
kubebash/: Dockerfile  hooks.yaml
libs/: README.md
libs/observability/: observability.py  pyproject.toml
networking/: certbot.dev.yaml  dns.dev.yaml  multiclusteringress.dev.yaml  namespace.dev.yaml  namespace.yaml
orchestration/: main.py  metrics.py  mongo.py  observability.py  requirements-pypi.txt  requirements.txt  spanner.py  trace.py
provisioning/: binauthz.tf  clusters.tf  config.tf  iam-certbot.tf  iam-config-connector.tf  iam-mcs.tf  iam-microservices.tf  iam-nodes.tf  iam.tf  main.tf  mattermost.tf  monitoring.tf  network.tf  outputs.tf  primary.tf  secondary.tf  tertiary.tf  variables.tf  versions.tf
queuer/: main.py  requirements-pypi.txt
repeater/: main.py
responder/: Dockerfile  main.py  requirements-pypi.txt
roles/: certbot.yaml  provisioner.yaml
site/: .gitignore  config.yaml  package-lock.json  package.json  postcss.config.js
slack/: manifest.yaml
tasks/: Dockerfile  main.py
(+163 files in other folders)
